--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.url=jdbc:mysql://localhost:3306/my_app_db
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
